[package]
author = "Keegan Myers"
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.1", features = ["full"]}
axum = {version = "0.6.19", features = ["headers"]}
serde = {version = "1.0.175", features = ["derive"]}
evmap = "10.0.2"
env_logger = "0.10.0"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.19"
parking_lot = "0.12.1"

rate-limiter-lib = { version = "0.1.0", path = "./rate-limiter-lib"}

[workspace]
members = [
  "rate-limiter-lib"
]
