[package]
author = "Keegan Myers"
name = "rate-limiter-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmap = "10.0.2"
tokio = {version = "1.29.1", features = ["full"]}
chrono = "0.4.26"
parking_lot = "0.12.1"
priority-queue = "1.3.2"
